# gpodder

./: pyproject.toml
src/gpodder/: model.py
tools/mac-osx/: release_on_mac.sh
tools/win_installer/: _base.sh  bootstrap.sh
