[build-system]
requires = [
    "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "gpodder"
description = "Media aggregator and podcast client"
authors = [
    {name = "Thomas Perl", email = "thp@gpodder.org"},
]
readme = "README.md"
license = {file = "COPYING"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.8"
dependencies = [
    "dbus-python;platform_system=='Linux'",
    "mygpoclient==1.10",
    "podcastparser==0.6.11",
    "PyGObject",
    "requests[socks]>=2.32.3",
    "urllib3>=2.2.2",
]
dynamic = ["version"]

[project.optional-dependencies]
eyed3 = ["eyed3"]
html5lib = ["html5lib==1.1"]
# extensions
audio_converter = ["ffmpeg"]
concatenate_videos = ["ffmpeg"]
rm_ogg_cover = ["mutagen==1.47.0"]
rockbox_convert2mp4 = ["ffmpeg", "kaa-metadata"]
rockbox_coverart = ["filelock", "pillow"]
sonos = ["soco>=0.7"]
tagging = ["mutagen==1.47.0", "pillow"]
video_converter = ["ffmpeg"]
youtube_dl = ["yt-dlp", "ffmpeg"]

[project.urls]
Homepage = "http://gpodder.org"
Documentation = "https://gpodder.github.io/docs/"
Repository = "https://github.com/gpodder/gpodder"
Issues = "https://github.com/gpodder/gpodder/issues"
"Mailing List" = "http://freelists.org/list/gpodder"
"IRC Channel" = "irc://irc.libera.chat/#gpodder"

[tool.setuptools.dynamic]
version = {attr = "gpodder.__version__"}
